# pisequencer

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt  run.py
backend/config/: gpio_mapping.json
backend/src/pysequencer/: __init__.py  gpio_controller.py  main.py  websocket_handler.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Boombox.tsx  Controls.tsx  Pad.tsx  SequencerGrid.tsx
frontend/src/hooks/: useSequencer.ts  useWebSocket.ts
frontend/src/types/: sequencer.ts
frontend/src/utils/: AudioClock.ts
planning/16-step-sequencer-web/: prd.md  tasks.md  technical_blueprint.md
web/: index.html
web/assets/: index-BH6Q20Mf.js  index-BH6Q20Mf.js.map  index-BbVza2Wz.css  index-BmSGKOmd.js  index-BmSGKOmd.js.map  index-C54vzzrp.css  index-CdSK9mmr.js  index-CdSK9mmr.js.map  index-ezICbzoN.css
